# ten_nice_things_about_rust

./: Cargo.toml
src/: abusing_lists.py  abusing_lists.rs  advent_of_code.rs  find_char.js  find_char.rs  find_char.ts  find_char_final.rs  jabberwocky.rs  lib.rs  main.rs  mario.rs  open_file.rs  strings_and_errors.rs  twins.rs  twins.ts
