[package]
name = "ten_nice_things_about_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"

[[bin]]
name = "nice_things_bin"
path = "src/main.rs"

[lib]
name = "nice_things"
path = "src/lib.rs"
